@@ -1,3 +1,14 @@
+2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Added Korean support
+	- Now fullscreen no more the default.
+
+	* boards/flags/ko.png:
+	* configure.in:
+	* docs/gcompris2spip.pl:
+	* src/gcompris/config.c:
+	* src/gcompris/properties.c: (gc_prop_new):
+
 2006-12-03  Yves Combe  <yves@ycombe.net>
 
 	By Miguel DE IZARRA:
